// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Multichannel carousel COMPACT mode N Buttons dynamic carousel (just text in button) with payload/path buttons N Buttons 1`] = `
[
  <message
    delay={0}
    role="image-message"
    src="https://cdn.slidesharecdn.com/profile-photo-sumeet.moghe-48x48.jpg?cb=1527568614"
    type="image"
    typing={0}
  />,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *Title 1*
    <button
      payload="Payload1"
    >
      Previo a la compra
    </button>
    <button
      payload="Payload1"
    >
      another button
      0
    </button>
  </message>,
  <message
    delay={0}
    role="image-message"
    src="https://nebula.wsimg.com/obj/NzQ3QUYxQzZBNzE4NjNFRTc1MTU6NmM4YjgzZWVlZTE2MGMzM2RkMTdlZjdjNGUyZmFhNDE6Ojo6OjA="
    type="image"
    typing={0}
  />,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *Title 2*
    <button
      payload="Payload2"
    >
      Durante la compra
    </button>
    <button
      payload="Payload2"
    >
      another button
      1
    </button>
  </message>,
]
`;

exports[`Multichannel carousel COMPACT mode N Buttons dynamic carousel with URL and postback buttons N Buttons displaying only postback buttons as whatsapp buttons 1`] = `
[
  <message
    delay={0}
    role="image-message"
    src="https://cdn.slidesharecdn.com/profile-photo-sumeet.moghe-48x48.jpg?cb=1527568614"
    type="image"
    typing={0}
  />,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *Title1* _Subtitle1_
    <button
      payload="payload1"
    >
      Previo a la compra
    </button>
    <button
      payload="payload2"
    >
      another button
      0
    </button>
  </message>,
  <message
    delay={0}
    role="image-message"
    src="https://nebula.wsimg.com/obj/NzQ3QUYxQzZBNzE4NjNFRTc1MTU6NmM4YjgzZWVlZTE2MGMzM2RkMTdlZjdjNGUyZmFhNDE6Ojo6OjA="
    type="image"
    typing={0}
  />,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *Title2* _Subtitle2_
    <button
      payload="payload1"
    >
      Durante la compra
    </button>
    <button
      payload="payload2"
    >
      another button
      1
    </button>
  </message>,
  <message
    delay={0}
    role="image-message"
    src="https://nebula.wsimg.com/obj/NzQ3QUYxQzZBNzE4NjNFRTc1MTU6NmM4YjgzZWVlZTE2MGMzM2RkMTdlZjdjNGUyZmFhNDE6Ojo6OjA="
    type="image"
    typing={0}
  />,
  <message
    body="Snatch"
    displayText="Visit website"
    footer="_Five minutes, Turkish_"
    type="whatsapp-cta-url-button"
    url="https://www.imdb.com/title/tt0208092"
  />,
  <message
    delay={0}
    role="image-message"
    src="https://m.media-amazon.com/images/M/MV5BMDBjOWYyMDQtOWRmOC00MDgxLWIxM2UtMTNjYzFiN2RkYTBlXkEyXkFqcGdeQXVyMTAyOTE2ODg0._V1_UY268_CR6,0,182,268_AL_.jpg"
    type="image"
    typing={0}
  />,
  <message
    body="El laberinto del fauno"
    displayText="Visit website"
    footer="_2006_"
    type="whatsapp-cta-url-button"
    url="https://www.imdb.com/title/tt0457430"
  />,
]
`;

exports[`Multichannel carousel COMPACT mode N Buttons dynamic carousel with payload/path buttons N Buttons 1`] = `
[
  <message
    delay={0}
    role="image-message"
    src="https://cdn.slidesharecdn.com/profile-photo-sumeet.moghe-48x48.jpg?cb=1527568614"
    type="image"
    typing={0}
  />,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *Title1* _Subtitle1_
    <button
      payload="payload1"
    >
      Previo a la compra
    </button>
    <button
      payload="payload2"
    >
      another button
      0
    </button>
  </message>,
  <message
    delay={0}
    role="image-message"
    src="https://nebula.wsimg.com/obj/NzQ3QUYxQzZBNzE4NjNFRTc1MTU6NmM4YjgzZWVlZTE2MGMzM2RkMTdlZjdjNGUyZmFhNDE6Ojo6OjA="
    type="image"
    typing={0}
  />,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *Title2* _Subtitle2_
    <button
      payload="payload1"
    >
      Durante la compra
    </button>
    <button
      payload="payload2"
    >
      another button
      1
    </button>
  </message>,
]
`;

exports[`Multichannel carousel COMPACT mode N Buttons dynamic carousel with url buttons 1`] = `
[
  <message
    delay={0}
    role="image-message"
    src="https://nebula.wsimg.com/obj/NzQ3QUYxQzZBNzE4NjNFRTc1MTU6NmM4YjgzZWVlZTE2MGMzM2RkMTdlZjdjNGUyZmFhNDE6Ojo6OjA="
    type="image"
    typing={0}
  />,
  <message
    body="Snatch"
    displayText="Visit website"
    footer="_Five minutes, Turkish_"
    type="whatsapp-cta-url-button"
    url="https://www.imdb.com/title/tt0208092"
  />,
  <message
    delay={0}
    role="image-message"
    src="https://m.media-amazon.com/images/M/MV5BMDBjOWYyMDQtOWRmOC00MDgxLWIxM2UtMTNjYzFiN2RkYTBlXkEyXkFqcGdeQXVyMTAyOTE2ODg0._V1_UY268_CR6,0,182,268_AL_.jpg"
    type="image"
    typing={0}
  />,
  <message
    body="El laberinto del fauno"
    displayText="Visit website"
    footer="_2006_"
    type="whatsapp-cta-url-button"
    url="https://www.imdb.com/title/tt0457430"
  />,
]
`;
